<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center">

    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/action_simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_spring"/>

    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/action_drag_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drag_and_back"/>

    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/action_fling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fling"/>

    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/action_rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate"/>
    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/action_chain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chain"/>

</LinearLayout>