<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:id="@+id/first"
            android:layout_width="@dimen/drag_circle_size"
            android:layout_height="@dimen/drag_circle_size"
            android:layout_marginTop="32dp"
            android:background="#2e7d32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/second"
            android:layout_width="@dimen/drag_circle_size"
            android:layout_height="@dimen/drag_circle_size"
            android:layout_marginTop="32dp"
            android:background="#CDDC39"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first"/>

    <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/right"
            app:layout_constraintBottom_toTopOf="@+id/down"/>

    <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/down" android:layout_marginBottom="8dp"/>

    <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/up"
            app:layout_constraintStart_toEndOf="@+id/left"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="587dp"
            app:layout_constraintBottom_toTopOf="@+id/down"/>

    <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/clear"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="20dp"
            android:background="@android:drawable/ic_menu_rotate"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>